--- a/templates/items.html
+++ b/templates/items.html
@@ -1,9 +1,7 @@
 <html>
 <head>
     <title>wykaz obiektów majątkowych</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
     <style>
         .table td, .table th {
@@ -27,7 +25,7 @@
     </style>
 </head>
 <body>
-    {% if items %}
+    {%- if items %}
     <h1 class="header">wyposażenie {% if dep %} {{dep}} {% endif %}przypisane do {{user}}</h1>
     <table class="table table-striped table-sm" style="width:auto; margin: 10px;">
         <tr>
@@ -39,7 +37,7 @@
             <th>wydział</th>
             <th>wartość</th>
         </tr>
-        {% for item in items %}
+        {% for item in items -%}
         <tr>
             <td>{{item.EAN}}</td>
             <td>{{item.number}}</td>
@@ -49,10 +47,10 @@
             <td style="text-align: center;">{{item.department}}</td>
             <td style="text-align: right;">{{ '%0.2f' % item.value|float}}</td>
         </tr>
-        {% endfor %}
+        {% endfor -%}
     </table>
-    {% else %}
-        <h1 class="header">{{user}} nie ma przypisanego żadnego wyposażenia {% if dep %}{{dep}} {% endif %}</h1>
-    {% endif %}
+    {%- else %}
+        <h1 class="header">{{user}} nie ma przypisanego żadnego wyposażenia {% if dep %} {{dep}}{% endif %}</h1>
+    {%- endif %}
 </body>
 </html>
